--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.3.2",
     "crypto-js": "~3.1.2-5",
     "crypto-rand": "0.0.2",
+    "current-week-number": "^1.0.7",
     "debug": "~1.0.4",
     "dot-emc": "~0.1.2",
     "express": "~4.1.2",
