--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "better-assert": "^1.0.0",
     "bitcoin": "^2.2.0",
     "bitcoinjs-lib": "^1.1.1",
+    "block_io": "^1.0.9",
     "body-parser": "~1.3.1",
     "compression": "^1.0.8",
     "cookie-parser": "^1.3.2",
