--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "async": "~0.8.0",
     "axios": "^0.5.4",
     "better-assert": "^1.0.0",
+    "bignumber.js": "^2.0.7",
     "bitcoin": "^2.2.0",
     "bitcoinjs-lib": "^1.1.1",
     "block_io": "^1.0.9",
